@Functionalities @Changed all pages styles for correct spacing with Figma layout vars

--- a/web/src/presentation/styles/base/grid-system.scss
+++ b/web/src/presentation/styles/base/grid-system.scss
@@ -103,4 +103,5 @@ $largeDeviceColumnWidth: 101px;
 
 .main {
   background-color: colors.$cf-color-black-500;
+  padding-top: 70px;
 }
